# Terra

./: .gitignore  README.md
terra/: MS_Map.py  add_GPS_to_place_nodes.py  build_terra.py  consistency_experiment.py  continuous_outlier_analysis.py  continuous_outlier_analysis_old.py  continuous_outlier_dict_saver.py  continuous_outlier_paper_results.py  dendrogram_viz.py  edge_weight_plots.py  gvd.py  memory_eval.py  memory_experiment.py  ms_avg_outlier_rejection.py  ms_map.py  ms_map_dist.py  (+24 more)
terra_ros/: CMakeLists.txt  README.md  package.xml  setup.cfg  setup.py
terra_ros/config/: extrinsic_transforms.yaml  params.yaml  rviz2.rviz
terra_ros/config/multicam/: liosam_params.yaml  params.yaml  params_rate.yaml
terra_ros/config/multicam/field_tests/: hope_campground_params.yaml  nunns_park_params.yaml  provo_river_p1_params.yaml  rock_canyon_campground_params.yaml  rvpark_v1_params.yaml  rvpark_v2_params.yaml  rvpark_v3_params.yaml  rvpark_v4_params.yaml  utah_lake_p1_params.yaml  utah_lake_p2_params.yaml
terra_ros/config/sim/: liosam_params.yaml  params.yaml
terra_ros/config/south_campus/: liosam_params.yaml  params.yaml
terra_ros/launch/: build_metric_map.launch.py  build_metric_map_multicam.launch.py  build_metric_map_multicam_fix_rate.launch.py  build_metric_map_multicam_rate.launch.py  build_metric_map_multicam_rateQoSfix.launch.py  build_metric_map_sim.launch.py  build_metric_map_south_campus.launch.py
terra_ros/terra_ros/: save_metric_data.py  save_metric_data_multicam.py  save_metric_data_multicam_fix_rate.py  save_metric_data_multicam_rate.py
(+84 files in other folders)
